--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<name>NerdAPI</name>
 	<description>API Restful desenvolvida para avaliação pela Loja do Mecânico</description>
 	<properties>
+		<java.version>8</java.version>
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
